# gnu-tools-for-stm32-archived

./: .dockerignore  .gitignore  BUILD.md  BUILD_REQUIREMENTS.md  DEBUG_EXTRACTION.md  DOCKER-CACHE-OPTIMIZATION.md  Dockerfile  INVESTIGATION_PLAN.md  README.md  TOOLCHAIN_LINKING_DEBUG_LOG.md  autogen.sh  build-binutils-gcc-first.sh  build-cmake-project.sh  build-common.sh  build-gcc-final-gdb.sh  build-newlib-nano.sh  build-newlib.sh  build-prerequisites.sh  build-runtime-libs-finalize.sh  build-toolchain-config.sh  build-toolchain-legacy.sh  build-toolchain.sh  build-toolchain.sh.pre-auto-fix  build_failure.txt  demo-docker-caching.sh  diagnose-toolchain.sh  diagnostics.txt  extract-debug-output.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-container.yml  build.yml  build_container_dryrun.yml  codeql.yml  validate-toolchain-pr.yml  validate-toolchain-reusable.yml  validate-toolchain.yml
build-native/: .stage
build-native/expat/: Makefile  config.status  libtool
build-native/expat/doc/: Makefile
build-native/expat/examples/: Makefile  elements  outline
build-native/expat/lib/: Makefile  libexpat.la  loadlibrary.lo  xmlparse.lo  xmlrole.lo  xmltok.lo
build-native/expat/tests/: Makefile
build-native/expat/xmlwf/: Makefile
build-native/gcc-first/: Makefile  config.status
build-native/gcc-first/libiberty/: Makefile  config.cache  config.status
build-native/gcc-first/lto-plugin/: Makefile  config.cache  config.h  config.status  libtool
build-native/gmp/: Makefile  assert.lo  compat.lo  config.h  config.m4  config.status  errno.lo  extract-dbl.lo  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  gmp-mparam.h  gmpxx.pc  invalid.lo  libgmp.la  libgmpxx.la  libtool  memory.lo  mp_bpl.lo  mp_clz_tab.lo  mp_dv_tab.lo  mp_get_fns.lo  mp_minv_tab.lo  mp_set_fns.lo  nextprime.lo  primesieve.lo  tal-reent.lo  version.lo
build-native/gmp/.libs/: libgmp.lai  libgmpxx.lai
build-native/gmp/cxx/: Makefile  dummy.lo  isfuns.lo  ismpf.lo  ismpq.lo  ismpz.lo  ismpznw.lo  libcxx.la  limits.lo  osdoprnti.lo  osfuns.lo  osmpf.lo  osmpq.lo  osmpz.lo
build-native/gmp/demos/: Makefile
build-native/gmp/doc/: Makefile
build-native/gmp/mpf/: Makefile  ceilfloor.lo  cmp_z.lo  div.lo  div_2exp.lo  div_ui.lo  eq.lo  fits_ulong.lo  fits_ushort.lo  get_dfl_prec.lo  get_prc.lo  get_si.lo  get_ui.lo  init2.lo  int_p.lo  iset.lo  iset_str.lo  iset_ui.lo  libmpf.la  random2.lo  set_dfl_prec.lo  set_prc.lo  set_si.lo  set_z.lo  (+4 more)
build-native/isl/: Makefile  basis_reduction_tab.lo  codegen_test.sh  config.status  gitversion.h  isl-uninstalled.pc  isl-uninstalled.sh  isl_aff.lo  isl_affine_hull.lo  isl_arg.lo  isl_ast.lo  isl_ast_build.lo  isl_ast_build_expr.lo  isl_ast_codegen.lo  isl_ast_graft.lo  isl_ast_int.lo  isl_band.lo  isl_bernstein.lo  isl_blk.lo  isl_bound  isl_bound.lo  isl_cat  isl_closure  isl_coalesce.lo  isl_codegen  isl_config.h  isl_constraint.lo  isl_convex_hull.lo  isl_ctx.lo  isl_deprecated.lo  isl_dim_map.lo  isl_equalities.lo  isl_factorization.lo  isl_farkas.lo  isl_flow.lo  isl_fold.lo  isl_gmp.lo  isl_hash.lo  isl_id.lo  isl_id_to_ast_expr.lo  (+52 more)
build-native/mpc/: Makefile  config.h  config.status  libtool
build-native/mpfr/: Makefile  config.status  libtool
build-native/zlib/: Makefile
docs/: README.md  automake-linting.md  automake-modernization-mpfr.md  automake-modernization-stage-mapping.md  autotools-bootstrap-guide.md  autotools-modernization-gmp.md  autotools-modernization-isl.md  autotools-modernization-mpc.md  autotools-modernization-summary.md  build-toolchain-linting-analysis.md  build-toolchain-modular-conversion.md  cache-stability-proof.md  docker-build-optimization.md  docker-layer-caching.md  linting-resolution-summary.md  modernization-binutils.md  modernization-gcc.md  modernization-gmp.md  modernization-newlib.md  toolchain-validation.md
src/: .gitignore
src/expat/: Makefile.in  configure  expat_config.h.in
src/gcc/: .gitignore
src/gdb/: configure.ac
src/gmp/: configure.ac
src/isl/: Makefile.in  configure  configure.ac  isl_config.h.in
src/libiconv/: aclocal.m4
src/mpc/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/mpfr/: Makefile.in  configure
test_project/: BUILD.md  CMakeLists.txt  arm-none-eabi-gcc.cmake
test_project/BSP/: .cproject  .mxproject  .project  BSP.ioc  STM32U083xx_RAM.ld  gcc_10_STM32U083RCTX_FLASH.ld  gcc_13_STM32U083RCTX_FLASH.ld
test_project/BSP/Inc/: main.h  stm32u0xx_it.h
test_project/BSP/Src/: main.c  stm32u0xx_it.c
test_project/reference/: README.md  nucleo-u083rc.elf  nucleo-u083rc.hex  nucleo-u083rc.map
(+1347 files in other folders)
